<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/white">


    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wave"
        android:layout_marginTop="-25dp"/>

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/applogo" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="350dp"
        android:layout_height="255dp"
        android:layout_marginTop="60dp"
        android:background="@color/white"
        android:elevation="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textStyle="italic"
            android:text="@string/title_login"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/til_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="18"
            android:inputType="textEmailAddress"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/et_hint_email_id"
            android:textColor="@color/black"
            android:textColorHint="@color/text"/>
        <EditText
            android:id="@+id/til_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="18"
            android:inputType="textPassword"
            android:layout_marginTop="90dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/et_hint_password"
            android:textColorHint="@color/text"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="140dp"
            android:text="@string/lbl_forgot_password"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="165dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_don_t_have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="68dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="195dp"
            android:background="@drawable/button_background"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/btn_lbl_login"
            android:textColor="@color/white" />

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>