<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportActivity"
    android:background="@color/white">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/navigation_bg"
        android:elevation="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/btn_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/home"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/btn_report"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/user_image_background"
                android:text="Report Waste"
                android:layout_marginTop="-3dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btn_community"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/fam"
                android:layout_marginTop="4dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btn_collect"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/user_image_background"
                android:text="Collect Waste"
                android:layout_marginTop="-6dp"
                android:layout_weight="1"/>

        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <TextView
        android:id="@+id/tv_report_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_title"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal"/>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="350dp"
        android:layout_height="170dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_report_title"
        android:layout_marginTop="90dp"
        android:background="@drawable/user_image_background">

        <EditText
            android:id="@+id/til_type_of_waste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="18"
            android:inputType="text"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/et_hint_type_of_waste"
            android:textColor="@color/black"
            android:textColorHint="@color/text"/>
        <EditText
            android:id="@+id/til_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="18"
            android:inputType="text"
            android:layout_marginTop="90dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/et_hint_address"
            android:textColor="@color/black"
            android:textColorHint="@color/text"/>
    </FrameLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/btn_pick_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_background"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/lbl_btn_select"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginTop="5dp"
        android:onClick="insert_Img"/>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_background"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/lbl_btn_submit_report"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_pick_image"
        android:layout_marginTop="15dp"
        android:onClick="insert_data"/>

    <TextView
        android:id="@+id/tv_report_submit_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Report submit success"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_submit"
        android:layout_marginTop="35dp"
        android:textSize="18dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>